[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/SteeringWheel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/BoatScript.gd" type="Script" id=2]
[ext_resource path="res://Materials/boat material.tres" type="Material" id=3]
[ext_resource path="res://Scenes/Cannon.tscn" type="PackedScene" id=4]
[ext_resource path="res://Wooden_Raft.obj" type="ArrayMesh" id=5]
[ext_resource path="res://Scenes/Anchor.tscn" type="PackedScene" id=6]
[ext_resource path="res://Aseprite/ship_trails.png" type="Texture" id=7]
[ext_resource path="res://Audio/Ocean.wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/splash_trimmed.wav" type="AudioStream" id=9]

[sub_resource type="BoxShape" id=10]
extents = Vector3( 3.5, 0.15, 4 )

[sub_resource type="BoxShape" id=11]
extents = Vector3( 0.25, 1, 4 )

[sub_resource type="BoxShape" id=12]
extents = Vector3( 0.2, 1, 3.5 )

[sub_resource type="CubeMesh" id=13]

[sub_resource type="AtlasTexture" id=21]
flags = 19
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 224, 32 )

[sub_resource type="AtlasTexture" id=22]
flags = 19
atlas = ExtResource( 7 )
region = Rect2( 0, 32, 224, 32 )

[sub_resource type="AtlasTexture" id=23]
flags = 19
atlas = ExtResource( 7 )
region = Rect2( 0, 64, 224, 32 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="BoxShape" id=25]
extents = Vector3( 3.47657, 0.104787, 3.82179 )

[node name="Boat" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, 0, 0 )
script = ExtResource( 2 )

[node name="BoatBody" type="RigidBody" parent="."]
transform = Transform( 1.2, 0, 0, 0, 1, 0, 0, 0, 1.2, 0, 1.375, 0 )
mode = 1
gravity_scale = 0.0

[node name="Floor" type="CollisionShape" parent="BoatBody"]
transform = Transform( 1, 0, 0, 0, 0.999999, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 10 )

[node name="CollisionShape" type="CollisionShape" parent="BoatBody"]
transform = Transform( 0.930639, 0, 0, 0, 0.999997, 0, 0, 0, 0.999999, 3.00899, 0.810714, -0.00599778 )
shape = SubResource( 11 )

[node name="CollisionShape4" type="CollisionShape" parent="BoatBody"]
transform = Transform( -8.9407e-08, 0, 1, 0, 0.999998, 0, -0.839906, 0, -8.9407e-08, 0.00899076, 0.810714, 3.694 )
shape = SubResource( 12 )

[node name="CollisionShape5" type="CollisionShape" parent="BoatBody"]
transform = Transform( 0, 0, 1, 0, 0.999998, 0, -0.732595, 0, -8.9407e-08, 0.00899088, 0.810714, -4.006 )
shape = SubResource( 12 )

[node name="CollisionShape3" type="CollisionShape" parent="BoatBody"]
transform = Transform( 0.680455, 0, 0, 0, 0.999998, 0, 0, 0, 0.999999, -2.99101, 0.810714, -0.00599778 )
shape = SubResource( 11 )

[node name="BoatMesh" type="Spatial" parent="BoatBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.375, 0 )

[node name="MeshInstance2" type="CSGMesh" parent="BoatBody/BoatMesh"]
transform = Transform( 1.18844, -0.0162921, 0, 0.167593, 0.0156294, 0, 0, 0, 4.11184, 1.86578, 1.06361, 0.0144625 )
visible = false
extra_cull_margin = 1.0
use_in_baked_light = true
mesh = SubResource( 13 )
material = ExtResource( 3 )

[node name="MeshInstance3" type="CSGMesh" parent="BoatBody/BoatMesh"]
transform = Transform( -1.18844, -0.0162921, 0, 0.167593, -0.0156294, 0, 0, 0, 4.11184, -1.84155, 1.08835, -0.00601315 )
visible = false
extra_cull_margin = 1.0
use_in_baked_light = true
mesh = SubResource( 13 )
material = ExtResource( 3 )

[node name="MeshInstance4" type="CSGMesh" parent="BoatBody/BoatMesh"]
transform = Transform( 0.317973, 0.108043, 0, -0.385867, 0.0890325, 0, 0, 0, 4, -3.00568, 1.49542, -0.0165075 )
visible = false
extra_cull_margin = 1.0
use_in_baked_light = true
mesh = SubResource( 13 )
material = ExtResource( 3 )

[node name="MeshInstance7" type="CSGMesh" parent="BoatBody/BoatMesh"]
transform = Transform( 0, -7.45058e-09, -3.32895, -0.383001, 0.0899955, -1.70806e-07, 0.321376, 0.107252, -2.38419e-07, 0.20714, 1.57329, -3.9408 )
visible = false
extra_cull_margin = 1.0
use_in_baked_light = true
mesh = SubResource( 13 )
material = ExtResource( 3 )

[node name="MeshInstance5" type="CSGMesh" parent="BoatBody/BoatMesh"]
transform = Transform( -0.317973, -0.108043, -6.03983e-07, -0.385867, 0.0890325, -1.0295e-07, 5.79439e-08, 1.40225e-08, -4, 3, 1.483, -0.017 )
visible = false
extra_cull_margin = 1.0
use_in_baked_light = true
mesh = SubResource( 13 )
material = ExtResource( 3 )

[node name="MeshInstance" type="CSGMesh" parent="BoatBody/BoatMesh"]
transform = Transform( 1.25101, 0, 0, 0, 0.193678, 0, 0, 0, 4.04146, 0.00952006, 0.889425, -0.00601319 )
visible = false
extra_cull_margin = 1.0
use_in_baked_light = true
mesh = SubResource( 13 )
material = ExtResource( 3 )

[node name="MeshInstance6" type="CSGMesh" parent="BoatBody/BoatMesh"]
transform = Transform( 2.96502, 0, 0, 0, 0.171638, 0, 0, 0, 4.04146, 0.0109755, 1.33078, -0.00168049 )
visible = false
extra_cull_margin = 1.0
use_in_baked_light = true
mesh = SubResource( 13 )
material = ExtResource( 3 )

[node name="CSGMesh" type="CSGMesh" parent="BoatBody/BoatMesh"]
transform = Transform( 0.04, 0, 0, 0, 0.04, 0, 0, 0, 0.04, -3.21059, 1.18271, 0 )
mesh = ExtResource( 5 )
material = ExtResource( 3 )

[node name="SteeringWheel" parent="BoatBody" instance=ExtResource( 1 )]

[node name="Cannon" parent="BoatBody" instance=ExtResource( 4 )]
transform = Transform( -4.37115e-08, 0, -1, 0, 1, 0, 1, 0, -4.37115e-08, 1.3893, 0.5, 3.07856 )

[node name="Anchor" parent="BoatBody" instance=ExtResource( 6 )]

[node name="RightTrails" type="AnimatedSprite3D" parent="BoatBody"]
transform = Transform( -5.24537e-08, 0, -1.2, 0, 1.2, 0, 1.2, 0, -5.24537e-08, -3.66843, -0.135764, -2.52467 )
flip_h = true
pixel_size = 0.05
shaded = true
double_sided = false
alpha_cut = 2
frames = SubResource( 24 )
frame = 2
playing = true

[node name="LeftTrails" type="AnimatedSprite3D" parent="BoatBody"]
transform = Transform( 0, 0, -1.2, 0, 1.2, 0, 1.2, 0, 0, 3.78547, -0.135764, -2.52174 )
flip_h = true
pixel_size = 0.05
shaded = true
double_sided = false
alpha_cut = 2
frames = SubResource( 24 )
frame = 1
playing = true

[node name="IcebergArea" type="Area" parent="BoatBody"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="BoatBody/IcebergArea"]
shape = SubResource( 25 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="BoatBody"]
transform = Transform( 0.833333, 0, 0, 0, 0.666667, 0, 0, 0, 0.833333, 0, -1.375, 0 )
stream = ExtResource( 8 )
unit_size = 14.0
autoplay = true

[node name="SplashPlayer" type="AudioStreamPlayer3D" parent="BoatBody"]
transform = Transform( 0.833333, 0, 0, 0, 0.666667, 0, 0, 0, 0.833333, 0, -1.375, 0 )
stream = ExtResource( 9 )
unit_db = 10.0
unit_size = 14.0

[connection signal="area_entered" from="BoatBody/IcebergArea" to="." method="_on_IcebergArea_area_entered"]
